<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/login_box"
        android:layout_width="417dp"
        android:layout_height="843dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_txt"
            android:textAlignment="center"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_id_txt"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_id_txt"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/login_id"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/login_id_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password_txt"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/password_txt"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password_value"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>